test/sema/struct_in_declref.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
}

fn foo(s: S) -> i32 {
    return s.x;
}

fn main() -> void {
    foo(S);
    // CHECK: [[# @LINE - 1 ]]:9: error: unexpected type of argument 'S' expected 'S{}'
}